objects/Extended_Profile_Category_Item__c.object
<CustomObject>
    <fields>
        <fullName>Business_Area_Group__c</fullName>
        <description>Business Area Group value of an Extended Profile Category Item.</description>
        <label>Business Area Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date of an Extended Profile Category Item. The Item has validity starting from this Date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Expiry Date of an Extended Profile Category Item. The Item has validity up to this Date.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Profile_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Extended Profile Category reference to a parent Extended Profile Category object&apos;s record.</description>
        <label>Extended Profile Category</label>
        <referenceTo>Extended_Profile_Category__c</referenceTo>
        <relationshipLabel>Extended Profile Category Items</relationshipLabel>
        <relationshipName>Extended_Profile_Category_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDCP_Active__c</fullName>
        <description>The field provides an indication whether this record is still current or has been inactivated (logically deleted) in the MDCP source system.</description>
        <label>MDCP Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Extended Profile Category Item World/Region or Country.</description>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Extended Profile Category Item status. Values not known and not boundable to a local picklist.</description>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Extended Profile Category Item type.Values not known, defined in MDCP by business and not boundable to a local picklist.</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Userkey__c</fullName>
        <description>Extended Profile Category Item unique key. Field kept at maximum size.</description>
        <externalId>true</externalId>
        <label>Userkey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Extended Profile Category Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Extended_Profile_Category__c</columns>
        <columns>Type__c</columns>
        <columns>Business_Area_Group__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>MDCP_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Extended Profile Category Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extended Profile Category Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>